adjusted styles correct on mobile now. Fixed student array splice on delete

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ ul.dropdown-menu{
     .container{
         margin: 0;
         padding:0;
-        width: 100%;
+        width: 98%;
     }
     .student-add-form{
         padding-right: 0;
